# bleevit

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN_REVIEW.md  LICENSE  PLAN.md  README.md
.claude/: settings.json
.claude/agents/: doc-curator.md  spec-reviewer.md  test-engineer.md
.claude/hooks/: guard-architecture.sh  guard-readme.sh  session-context.sh  stop-plan-guard.sh
.claude/rules/: frontend-code.md  reference-model.md  runtime-code.md
.claude/skills/implement/: SKILL.md
.claude/skills/new-pallet/: SKILL.md
.claude/skills/spec-audit/: SKILL.md
.claude/skills/sync-docs/: SKILL.md
.codex/: README.md
.codex/prompts/: implement-next.md  spec-audit.md  sync-docs.md
.github/workflows/: ci.yml  release.yml
chopsticks/: README.md
crates/attestor-core/src/: lib.rs
crates/conditional-ledger-core/src/: lib.rs
crates/constitution-core/: Cargo.toml
crates/constitution-core/src/: lib.rs
crates/epoch-core/: Cargo.toml
crates/epoch-core/src/: lib.rs
crates/epoch-core/tests/: decision_vectors.rs
crates/execution-guard-core/src/: lib.rs
crates/futarchy-fixed/fixtures/: transcendental_corpus.csv
crates/futarchy-fixed/src/: lib.rs
crates/futarchy-primitives/: Cargo.toml
crates/futarchy-primitives/src/: lib.rs
crates/futarchy-treasury-core/src/: lib.rs
crates/futarchy-treasury-core/tests/: treasury_vectors.rs
crates/market-core/src/: lib.rs
crates/market-core/tests/: twap_vectors.rs
crates/oracle-core/src/: lib.rs
crates/origins-core/src/: lib.rs
crates/registry-core/src/: lib.rs
crates/welfare-core/: Cargo.toml
crates/welfare-core/src/: lib.rs
deploy/chain-specs/: README.md
deploy/genesis/: allocations.template.json
deploy/monitoring/: README.md  attestation-monitor.example.toml
deploy/runbooks/: RB-BOOTNODE.md  RB-INTAKE.md  RB-KEEPER.md  RB-ORACLE.md  RB-UPGRADE.md  RB-XCM.md  README.md
docs/architecture/: 00-decision-record.md  01-system-overview.md  02-integration-contract.md  03-conditional-ledger.md  04-markets-and-pricing.md  05-welfare-and-decision-engine.md  06-governance-and-guardians.md  07-oracle-and-disputes.md  08-treasury-and-economics.md  09-execution-upgrades-and-rollout.md  10-frontend-architecture.md  11-frontend-workflows.md  12-release-and-operations.md  13-parameters.md  14-threat-model.md  15-invariants-and-testing.md
docs/design/claude-design-kit/: 00-START-HERE.md  01-product-brief.md  02-domain-model-and-lifecycles.md  03-frontend-architecture-VERBATIM.md  04-frontend-workflows-and-screens-VERBATIM.md  05-data-naming-and-parameters.md  PROMPT.md
fuzz/: Cargo.toml  README.md  rust-toolchain.toml
fuzz/corpus/lmsr_trade_paths/: baseline_two_sided.seed  depletion_sell_rejection.seed  gate_reject_security.seed  v1_v2_v5_round_trip.seed  v3_displacement.seed  v4_loss_walk.seed
fuzz/corpus/nested_wrapper_filter/: as_multi_threshold_1_code.scale  proxy_announced_param.scale  scheduler_oracle.scale  shared_budget_20_calls.scale
fuzz/corpus/payload_scale_decode/: max_16_calls_64k.scale  reject_17_calls.scale  reject_length_overflow.scale  valid_param.scale
fuzz/examples/: generate_corpus.rs
fuzz/fuzz_targets/: lmsr_trade_paths.rs  nested_wrapper_filter.rs  payload_scale_decode.rs
fuzz/src/: lib.rs
keeper/: Cargo.toml  README.md
keeper/bleavit-keeper/src/: snapshot.rs
pallets/attestor/: Cargo.toml
pallets/attestor/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/conditional-ledger/src/: lib.rs
pallets/constitution/: Cargo.toml
pallets/constitution/src/: benchmarking.rs  lib.rs  tests.rs
pallets/epoch/: Cargo.toml
pallets/epoch/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/execution-guard/: Cargo.toml
pallets/execution-guard/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/futarchy-treasury/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/guardian/: Cargo.toml
pallets/guardian/src/: lib.rs
pallets/inflow-caps/src/: lib.rs  tests.rs
pallets/market/src/: benchmarking.rs  lib.rs  tests.rs
pallets/oracle/: Cargo.toml
pallets/oracle/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/registry/: Cargo.toml
pallets/registry/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/welfare/: Cargo.toml
pallets/welfare/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
reference-model/fixtures/: vectors.json
reference-model/src/bleavit_reference_model/: decision.py  treasury.py  welfare.py
reference-model/tests/: test_reference_model.py
runtime-api/src/: lib.rs  telemetry.rs  tests.rs
runtime/bleavit-runtime/: Cargo.toml
runtime/bleavit-runtime/src/: apis.rs  classifier.rs  configs.rs  genesis.rs  lib.rs  migrations.rs  pov_budgets.rs  telemetry.rs  tests.rs  tests_migration_guard.rs  tests_s5.rs  tests_telemetry.rs  tests_treasury_health.rs  views.rs
runtime/bleavit-runtime/src/weights/: pallet_attestor.rs  pallet_epoch.rs  pallet_execution_guard.rs
runtime/bleavit-xcm/src/: filter.rs  (+2 more)
runtime/runtime-api/: Cargo.toml
simulation/results/: phase0-calibration.json
simulation/tests/: test_engine.py  test_runner.py
tools/ci/: check-ci-parity.py  check-doc-links.py  check-ghsa-only.py  check-weight-storage-bounds.py  fuzz-gates.sh  runtime-profile-gates.sh  rust-workspace-gates.sh  weight-regression-acks.toml
tools/deploy/: check-runbooks.py  generate-chain-specs.sh  validate-chain-spec.py
tools/env/: generate-relay-specs.sh  run-evidence.py  suites.json
tools/fixed/: generate-lmsr-corpus.py
tools/limit-coverage/: registry.toml
tools/monitoring/: attestation_monitor.py  chain_alerts_exporter.py  check_alert_coverage.py  series-inventory.toml
tools/reference-model/: generate-vectors.py
tools/release/: README.md  assemble-release.py  build-runtime.sh  extract-metadata.py  runtime-profiles.json  runtime_profiles.py  surface-manifest.json
zombienet/: README.md
zombienet/drills/: 04-dead-man.zndsl  08-expedited-code-under-freeze.zndsl  09-three-unattended-epochs.zndsl
zombienet/networks/: bleavit-fast.toml
(+25 files in other folders)
