[package]
name = "constitution-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futarchy-primitives = { path = "../../crates/futarchy-primitives", default-features = false }
parity-scale-codec = { version = "3.7.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = ["futarchy-primitives/std", "parity-scale-codec/std", "scale-info/std"]
runtime-benchmarks = []
# SQ-128 (G1 drill 09): default-off compressed epoch-timing Param defaults for a
# test-only runtime wasm. Forwards the kernel `fast-timing` gate so the registry
# `epoch.length`/`dec.window`/`dec.trailing` genesis seeds derive from
# `kernel::FAST_DAY_BLOCKS`. Never enabled in a release build. See PLAN.md · Decision log.
fast-timing = ["futarchy-primitives/fast-timing"]

[dev-dependencies]
proptest = "1.11.0"
