[package]
name = "pallet-epoch"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
epoch-core = { path = "../../crates/epoch-core", default-features = false }
futarchy-primitives = { path = "../../crates/futarchy-primitives", default-features = false }
parity-scale-codec = { version = "3.7.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
  "epoch-core/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "futarchy-primitives/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "sp-runtime/std",
]
runtime-benchmarks = [
  "dep:frame-benchmarking",
  "epoch-core/runtime-benchmarks",
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "sp-runtime/try-runtime",
]
